# OpenDentalAuditDataRetrieval

./: .env.template  .gitignore  APIEndpoint Data.csv  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
scripts/: test_individual_endpoints.py
specs/001-audit-data-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-audit-data-cli/checklists/: requirements.md
specs/001-audit-data-cli/contracts/: opendental-api.md
specs/002-endpoint-auth-fix/: plan.md  research.md  spec.md  tasks.md
specs/002-fix-endpoint-parameters/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-endpoint-testing/: README.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-endpoint-testing/contracts/: test-contracts.md
specs/main/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
src/opendental_cli/: __init__.py  __main__.py  api_client.py  audit_logger.py  circuit_breaker.py  cli.py  credential_manager.py  orchestrator.py  output_formatter.py  password_manager.py  phi_redactor.py  phi_sanitizer.py
src/opendental_cli/models/: __init__.py  audit_log.py  credential.py  request.py  response.py
src/opendental_cli/models/opendental/: __init__.py  allergies.py  appointment.py  billing.py  clinical_notes.py  diseases.py  insurance.py  medications.py  patient.py  patient_notes.py  procedure_logs.py  treatment.py  vital_signs.py
tests/: conftest.py
tests/contract/: test_api_client_golden_path.py  test_api_client_partial_failure.py  test_api_client_rate_limit.py  test_api_client_timeout.py
tests/fixtures/: appointment_503.json  appointment_67890.json  billing_success.json  clinical_notes_success.json  insurance_malformed.json  insurance_success.json  patient_12345.json  patient_404.json  treatment_success.json
tests/integration/: test_credential_flow.py  test_edge_cases.py  test_golden_path.py  test_partial_failure.py  test_phi_redaction.py
tests/unit/: test_api_client.py  test_audit_logger.py  test_circuit_breaker.py  test_credential_manager.py  test_models.py  test_output_formatter.py  test_password_manager.py  test_phi_redactor.py  test_phi_sanitizer.py
